Tests added, duplication removed